--- a/app/src/main/res/drawable/ic_curr_play.xml
+++ b/app/src/main/res/drawable/ic_curr_play.xml
@@ -1,6 +1,6 @@
 <vector xmlns:ns0="http://schemas.android.com/apk/res/android" ns0:width="24.0dp" ns0:height="24.0dp" ns0:viewportWidth="1000.0" ns0:viewportHeight="1000.0">
   <path ns0:name="path988" ns0:pathData="M182.303343125 117.740859275C182.303343125 117.740859275 182.303343125 887.667673768 182.303343125 887.667673768C182.303343125 887.667673768 577.103921283 500.000004 577.103921283 500.000004C577.103921283 500.000004 182.303343125 117.740859275 182.303343125 117.740859275"
-      ns0:fillColor="@color/PlaybackControlAction" ns0:fillAlpha="1.0"
-      ns0:strokeColor="@color/PlaybackControlAction" ns0:strokeWidth="1"
+      ns0:fillColor="?attr/ActionBtn" ns0:fillAlpha="1.0"
+      ns0:strokeColor="?attr/ActionBtn" ns0:strokeWidth="1"
       ns0:strokeAlpha="1.0" ns0:strokeLineCap="butt" ns0:strokeLineJoin="miter"/>
 </vector>
