--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <attr name="colorOnPrimary" format="color" />
-
-    <attr name="RatingHighlight" format="color" />
-    <attr name="RatingNormal" format="color" />
+    <attr name="ActionBtn" format="color" />
+    <attr name="RatingOn" format="color" />
+    <attr name="RatingOff" format="color" />
+    <attr name="TrackLooperOff" format="color" />
+    <attr name="TrackLooperOn" format="color" />
 </resources>
