--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,18 +22,27 @@
     <style name="Theme.AppTheme" parent="Theme.AppCompat.NoActionBar">
         <!-- Customize your theme here. @android:style/Theme.Black.NoTitleBar -->
         <item name="android:seekBarStyle">@style/SeekBarAppTheme</item>
+        <item name="colorPrimary">@color/black</item>
         <item name="colorOnPrimary">@color/blood</item>
         <item name="ActionBtn">?attr/colorOnPrimary</item>
         <item name="RatingOn">?attr/colorOnPrimary</item>
         <item name="RatingOff">@color/LightGrey</item>
         <item name="TrackLooperOn">?attr/colorOnPrimary</item>
         <item name="TrackLooperOff">@color/LightGrey</item>
+        <item name="TextPlaying">?attr/colorOnPrimary</item>
+        <item name="TextNotPlaying">@color/white</item>
+
+        <item name="RowGroupLevel1">@color/white</item>
+        <item name="RowGroupLevel2">@color/white</item>
+    </style>
+
+    <style name="Theme.AppThemeDark" parent="Theme.AppTheme">
+        <item name="colorOnPrimary">@color/white</item>
     </style>
 
     <style name="Theme.AppThemeWhite" parent="Theme.AppTheme">
-        <!-- Customize your theme here. @android:style/Theme.Black.NoTitleBar -->
-        <item name="android:seekBarStyle">@style/SeekBarAppTheme</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorOnPrimary">@color/black</item>
     </style>
 
     <style name="BottomButton" parent="android:Widget">
@@ -43,12 +52,6 @@
         <item name="android:paddingLeft">10dp</item>
         <item name="android:paddingRight">10dp</item>
     </style>
-
-    <!-- todo
-    <item "levelOffset"">15</item>
-    fonttype: bold, italic, regular...
-    rightoffset
-    -->
 
     <style name="SeekBarAppTheme" parent="Widget.AppCompat.SeekBar">
         <item name="android:progressDrawable">@drawable/seekbar_horizontal_holo_light</item>
@@ -63,7 +66,7 @@
     </style>
 
     <style name="PreferenceTheme" parent="Theme.AppCompat.NoActionBar">
-        <item name="colorAccent">?attr/colorOnPrimary</item>
+        <item name="colorAccent">@color/blood</item>
     </style>
 
 </resources>
