--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -2,13 +2,13 @@
 <resources>
     <attr name="colorPrimary" format="color" />
     <attr name="colorOnPrimary" format="color" />
-    <attr name="ActionBtn" format="color" />
-    <attr name="RatingOn" format="color" />
-    <attr name="RatingOff" format="color" />
-    <attr name="TrackLooperOff" format="color" />
-    <attr name="TrackLooperOn" format="color" />
-    <attr name="TextPlaying" format="color" />
-    <attr name="TextNotPlaying" format="color" />
-    <attr name="RowGroupLevel1" format="color" />
-    <attr name="RowGroupLevel2" format="color" />
+    <attr name="colorActionBtn" format="color" />
+    <attr name="colorRatingOn" format="color" />
+    <attr name="colorRatingOff" format="color" />
+    <attr name="colorTrackLooperOff" format="color" />
+    <attr name="colorTrackLooperOn" format="color" />
+    <attr name="colorTextPlaying" format="color" />
+    <attr name="colorTextNotPlaying" format="color" />
+    <attr name="colorRowGroup" format="color" />
+    <attr name="colorRowGroup2nd" format="color" />
 </resources>
