--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="blood">#f30000</color>
-    <color name="white">#ffffffff</color>
-    <color name="black">#88000000</color>
-    <color name="lightBlack">#88353535</color>
+    <color name="Blood">#f30000</color>
+    <color name="White">#ffffffff</color>
+    <color name="Black">#88000000</color>
+    <color name="LightBlack">#88353535</color>
     <color name="LightGrey">#ff666666</color>
 
     <color name="RowGroupFolderBackground">#88353535</color>
