--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,27 +22,27 @@
     <style name="Theme.AppTheme" parent="Theme.AppCompat.NoActionBar">
         <!-- Customize your theme here. @android:style/Theme.Black.NoTitleBar -->
         <item name="android:seekBarStyle">@style/SeekBarAppTheme</item>
-        <item name="colorPrimary">@color/black</item>
-        <item name="colorOnPrimary">@color/blood</item>
-        <item name="ActionBtn">?attr/colorOnPrimary</item>
-        <item name="RatingOn">?attr/colorOnPrimary</item>
-        <item name="RatingOff">@color/LightGrey</item>
-        <item name="TrackLooperOn">?attr/colorOnPrimary</item>
-        <item name="TrackLooperOff">@color/LightGrey</item>
-        <item name="TextPlaying">?attr/colorOnPrimary</item>
-        <item name="TextNotPlaying">@color/white</item>
+        <item name="colorPrimary">@color/Black</item>
+        <item name="colorOnPrimary">@color/Blood</item>
+        <item name="colorActionBtn">?attr/colorOnPrimary</item>
+        <item name="colorRatingOn">?attr/colorOnPrimary</item>
+        <item name="colorRatingOff">@color/LightGrey</item>
+        <item name="colorTrackLooperOn">?attr/colorOnPrimary</item>
+        <item name="colorTrackLooperOff">@color/LightGrey</item>
+        <item name="colorTextPlaying">?attr/colorOnPrimary</item>
+        <item name="colorTextNotPlaying">@color/White</item>
 
-        <item name="RowGroupLevel1">@color/white</item>
-        <item name="RowGroupLevel2">@color/white</item>
+        <item name="colorRowGroup">@color/White</item>
+        <item name="colorRowGroup2nd">@color/White</item>
     </style>
 
     <style name="Theme.AppThemeDark" parent="Theme.AppTheme">
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorOnPrimary">@color/White</item>
     </style>
 
     <style name="Theme.AppThemeWhite" parent="Theme.AppTheme">
-        <item name="colorPrimary">@color/white</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorPrimary">@color/White</item>
+        <item name="colorOnPrimary">@color/Black</item>
     </style>
 
     <style name="BottomButton" parent="android:Widget">
@@ -66,7 +66,7 @@
     </style>
 
     <style name="PreferenceTheme" parent="Theme.AppCompat.NoActionBar">
-        <item name="colorAccent">@color/blood</item>
+        <item name="colorAccent">@color/Blood</item>
     </style>
 
 </resources>
