--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,11 +19,11 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="Theme.AppTheme" parent="Theme.AppCompat.NoActionBar">
+    <style name="Theme.AppThemeDark" parent="Theme.AppCompat.NoActionBar">
         <!-- Customize your theme here. @android:style/Theme.Black.NoTitleBar -->
         <item name="android:seekBarStyle">@style/SeekBarAppTheme</item>
         <item name="colorPrimary">@color/Black</item>
-        <item name="colorOnPrimary">@color/Blood</item>
+        <item name="colorOnPrimary">@color/White</item>
         <item name="colorActionBtn">?attr/colorOnPrimary</item>
         <item name="colorRatingOn">?attr/colorOnPrimary</item>
         <item name="colorRatingOff">@color/LightGrey</item>
@@ -33,17 +33,33 @@
         <item name="colorTextNotPlaying">@color/White</item>
 
         <item name="colorRowGroup">@color/LightBlack</item>
-        <item name="colorRowGroup2nd">@color/Black</item>
-        <item name="colorRowSong">@color/Black</item>
+        <item name="colorRowGroup2nd">?attr/colorPrimary</item>
+        <item name="colorRowSong">?attr/colorPrimary</item>
     </style>
 
-    <style name="Theme.AppThemeDark" parent="Theme.AppTheme">
-        <item name="colorOnPrimary">@color/White</item>
+    <style name="Theme.AppTheme" parent="Theme.AppThemeDark">
+        <item name="colorOnPrimary">@color/Blood</item>
     </style>
 
-    <style name="Theme.AppThemeWhite" parent="Theme.AppTheme">
+    <style name="Theme.AppThemeLight" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Customize your theme here. @android:style/Theme.Black.NoTitleBar -->
+        <item name="android:seekBarStyle">@style/SeekBarAppTheme</item>
         <item name="colorPrimary">@color/White</item>
         <item name="colorOnPrimary">@color/Black</item>
+        <item name="colorActionBtn">?attr/colorOnPrimary</item>
+        <item name="colorRatingOn">?attr/colorOnPrimary</item>
+        <item name="colorRatingOff">@color/LightGrey</item>
+        <item name="colorTrackLooperOn">?attr/colorOnPrimary</item>
+        <item name="colorTrackLooperOff">@color/LightGrey</item>
+        <item name="colorTextPlaying">?attr/colorOnPrimary</item>
+        <item name="colorTextNotPlaying">@color/Black</item>
+
+        <item name="colorRowGroup">@color/LightWhite</item>
+        <item name="colorRowGroup2nd">?attr/colorPrimary</item>
+        <item name="colorRowSong">?attr/colorPrimary</item>
+    </style>
+
+    <style name="Theme.AppThemeWhite" parent="Theme.AppThemeLight">
     </style>
 
     <style name="BottomButton" parent="android:Widget">
@@ -63,7 +79,7 @@
         <item name="android:thumbOffset">16dip</item>
         <item name="android:paddingLeft">16dip</item>
         <item name="android:paddingRight">16dip</item>
-        <item name="android:color">#ffff0000</item>
+        <item name="android:color">?attr/colorPrimary</item>
     </style>
 
     <style name="PreferenceTheme" parent="Theme.AppCompat.NoActionBar">
