--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -387,9 +387,9 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/details_layout"
         android:choiceMode="singleChoice"
-        android:fastScrollEnabled="true"
+        android:fastScrollEnabled="false"
         android:hapticFeedbackEnabled="false"
-        android:scrollbarThumbVertical="@drawable/fastscroll_thumb_holo"
+        android:scrollbarThumbVertical="@drawable/scrollbar"
         android:scrollbars="vertical" />
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
