--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="Blood">#f30000</color>
+    <color name="DarkBlood">#c00000</color>
     <color name="Blue">#0022dd</color>
     <color name="White">#ffffffff</color>
     <color name="Black">#ff000000</color>
