--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -216,9 +216,7 @@
         android:layout_height="60dp"
         android:layout_below="@+id/seek_buttons_layout"
         android:orientation="horizontal"
-        android:paddingBottom="2dp"
-        android:paddingTop="2dp">
-        >
+        android:padding="4dp">
 
         <TextView
             android:id="@+id/warning_text"
@@ -229,11 +227,38 @@
             android:textColor="?attr/colorActionBtn"></TextView>
     </LinearLayout>
 
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/donate_layout"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_below="@+id/warning_layout"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="4dp">
+        <ImageButton
+            android:id="@+id/donate_button"
+            style="@style/BottomButton"
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="10"
+            android:scaleType="centerInside"
+            android:onClick="openDonate"
+            android:longClickable="true"
+            android:src="@drawable/coins" />
+        <TextView
+            android:id="@+id/donate_text"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/settings_donate_summary"></TextView>
+    </LinearLayout>
+
     <LinearLayout
         android:id="@+id/details_layout"
         android:layout_width="match_parent"
         android:layout_height="175dp"
-        android:layout_below="@id/warning_layout"
+        android:layout_below="@id/donate_layout"
         android:gravity="left"
         android:orientation="horizontal">
 
