Show changelog if new version

--- a/app/src/main/res/layout/changelog.xml
+++ b/app/src/main/res/layout/changelog.xml
@@ -64,7 +64,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="start|top"
-            android:text="@string/changelogs_title"
+            android:text="@string/changelogs_header"
             android:textSize="20sp"
             android:layout_marginBottom="8dp"
             android:textStyle="bold" />
