--- a/app/src/main/res/layout/changelogs.xml
+++ b/app/src/main/res/layout/changelogs.xml
@@ -18,7 +18,7 @@
 -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/changelog_layout"
+    android:id="@+id/changelogs_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -69,7 +69,7 @@
             android:layout_marginBottom="8dp"
             android:textStyle="bold" />
         <TextView
-            android:id="@+id/changelog_text"
+            android:id="@+id/changelogs_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
