--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -247,6 +247,10 @@
             android:title="@string/settings_rescan_title"
             android:summary="@string/settings_rescan"/>
 
+        <Preference
+            android:key="RATINGS_NOT_WRITTEN_KEY"
+            android:title="@string/settings_ratings_not_written_title"/>
+
         <CheckBoxPreference
             android:key="MEDIA_BUTTON_START_APP"
             android:title="@string/settings_media_button_start_app_title"
