toggle show group total time rather than total number of songs

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -245,7 +245,13 @@
             android:key="HIDE_NAVIGATION_BAR"
             android:title="@string/settings_hide_navigation_bar"
             android:summary="@string/settings_hide_navigation_bar_summary"
-            android:defaultValue="true"/>
+            android:defaultValue="false"/>
+
+        <CheckBoxPreference
+            android:key="SHOW_GROUP_TOTAL_TIME"
+            android:title="@string/settings_show_group_total_time"
+            android:summary="@string/settings_show_group_total_time_summary"
+            android:defaultValue="false"/>
 
         <CheckBoxPreference
             android:key="SAVE_SONG_POS"
