--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -467,7 +467,7 @@
             android:layout_height="match_parent"
             android:layout_weight="50"
             android:longClickable="true"
-            android:onClick="openShuffle"
+            android:onClick="changeShuffle"
             android:padding="14dp"
             android:scaleType="fitCenter"
             android:src="@drawable/ic_menu_no_shuffle" />
